--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://ju2pom.github.io/gamedev/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 
