--- a/hugo.toml
+++ b/hugo.toml
@@ -1,18 +1,29 @@
 baseURL = 'https://ju2pom.github.io/gamedev/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Ju2pom GameDev'
 
 [module]
-  [[module.imports]]
-    path = "github.com/hugo-sid/hugo-blog-awesome"
-
-[[params.socialIcons]]
-name = "github"
-url = "https://github.com/ju2pom"
-
-[[params.socialIcons]]
-name = "twitter"
-url = "https://twitter.com"
+    [module.imports]
+        path = "github.com/hugo-sid/hugo-blog-awesome"
 
 [params]
   goToTop = true
+  
+    [[params.socialIcons]]
+        name = "github"
+        url = "https://github.com/ju2pom"
+    
+    [[params.socialIcons]]
+        name = "x"
+        url = "https://x.com/julienju2pom"
+
+    [[params.socialIcons]]
+        name = "linkedin"
+        url = "www.linkedin.com/in/julien-amsellem-4771724"
+
+    [params.author]
+        #avatar = "yatris-logo3.jpg"
+        avatar = "julien-amsellem-128.png"
+        intro = "Game dev journey"
+        name = "Julien Amsellem"
+        description = "Some technical articles about making a game called Yatris as a solo developer"
